# neureset_simulator

./: CMakeLists.txt  README.md
src/: defs.h  main.cpp
src/battery/: battery.cpp
src/main_window/: mainwindow.ui
src/pc/: pc.cpp  pc.h
src/qcustomplot/: qcustomplot.cpp
src/session_manager/: sessionmanager.h
src/signal_processor/: signalprocessor.cpp  signalprocessor.h
